sandbox/output
Java7DateTest.java:45: error: non-static method getCreationDate() cannot be referenced from a static context
            User.getCreationDate().toString());
                ^
MedicineClashTest.java:29: error: cannot find symbol
        Set<Customer> expectedClashedSet = new HashSet<Customer>();
            ^
  symbol:   class Customer
  location: class MedicineClashTest
MedicineClashTest.java:29: error: cannot find symbol
        Set<Customer> expectedClashedSet = new HashSet<Customer>();
                                                       ^
  symbol:   class Customer
  location: class MedicineClashTest
MedicineClashTest.java:30: error: cannot find symbol
        Set<Customer> customers = new HashSet<Customer>();
            ^
  symbol:   class Customer
  location: class MedicineClashTest
MedicineClashTest.java:30: error: cannot find symbol
        Set<Customer> customers = new HashSet<Customer>();
                                              ^
  symbol:   class Customer
  location: class MedicineClashTest
MedicineClashTest.java:31: error: cannot find symbol
        Set<Medicine> medicines = new HashSet<Medicine>();
            ^
  symbol:   class Medicine
  location: class MedicineClashTest
MedicineClashTest.java:31: error: cannot find symbol
        Set<Medicine> medicines = new HashSet<Medicine>();
                                              ^
  symbol:   class Medicine
  location: class MedicineClashTest
MedicineClashTest.java:32: error: cannot find symbol
        Customer customerNotTakingBothMedicines = new Customer("110101197010104510", "Ben", medicines);
        ^
  symbol:   class Customer
  location: class MedicineClashTest
MedicineClashTest.java:32: error: cannot find symbol
        Customer customerNotTakingBothMedicines = new Customer("110101197010104510", "Ben", medicines);
                                                      ^
  symbol:   class Customer
  location: class MedicineClashTest
MedicineClashTest.java:34: error: cannot find symbol
        assertEquals(expectedClashedSet, medicineClash.Of(customers));
                                         ^
  symbol:   variable medicineClash
  location: class MedicineClashTest
10 errors
